# MK_TelegaGFY

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
src/telega_guard/: __init__.py  __main__.py  app.py  logging.py  main.py  models.py  telethon_auth.py
src/telega_guard/bot/: __init__.py  access.py  callbacks.py  keyboards.py  middlewares.py
src/telega_guard/bot/handlers/: admin.py  membership.py  owner.py  start.py
src/telega_guard/config/: settings.py
src/telega_guard/db/: __init__.py  sqlite.py
src/telega_guard/repositories/: chat_settings.py  lookup_cache.py  moderation_events.py  private_users.py  runtime_state.py
src/telega_guard/services/: channel_admin_log.py  detector.py  lookup.py  moderation.py
src/telega_guard/userbot/: __init__.py  watchers.py
