[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telega-guard"
version = "0.1.0"
description = "Telegram moderation bot that detects Telega usage with aiogram and Telethon"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.26.0,<4.0.0",
  "Telethon>=1.43.0,<2.0.0",
  "aiosqlite>=0.20.0,<1.0.0",
  "aiohttp>=3.10.0,<4.0.0",
  "pydantic-settings>=2.8.0,<3.0.0",
]

[project.scripts]
telega-guard = "telega_guard.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
